--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -12,12 +12,12 @@
         <FrameLayout
                 android:id="@+id/frameLayout"
                 android:layout_width="0dp"
-                     android:layout_height="match_parent"
-                     android:layout_weight="1">
+                android:layout_height="match_parent"
+                android:layout_weight="1">
             <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/imageView" app:srcCompat="@drawable/bluesquare" android:scaleType="fitXY"/>
+                    android:id="@+id/imageView" app:srcCompat="@drawable/blackgreen" android:scaleType="fitXY"/>
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -34,7 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/imageView2"
-                    android:layout_weight="1" app:srcCompat="@drawable/bluesquare" android:scaleType="fitXY"/>
+                    app:srcCompat="@drawable/blackgreen" android:scaleType="fitXY"/>
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -50,12 +50,51 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/imageView3"
-                    android:layout_weight="1" android:scaleType="fitXY" app:srcCompat="@drawable/bluesquare"/>
+                    android:layout_weight="1" android:scaleType="fitXY" app:srcCompat="@drawable/blackgreen"/>
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/textView3"
                     android:gravity="center" android:textSize="30sp"/>
+        </FrameLayout>
+        <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:id="@+id/frameLayout4" android:layout_weight="1">
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
+                    android:id="@+id/imageView4" android:scaleType="fitXY"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/textView4" android:textSize="30sp"
+                    android:gravity="center"/>
+        </FrameLayout>
+        <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:id="@+id/frameLayout5" android:layout_weight="1">
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
+                    android:id="@+id/imageView5" android:scaleType="fitXY"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/textView5" android:textSize="30sp"
+                    android:gravity="center"/>
+        </FrameLayout>
+        <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/frameLayout6">
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
+                    android:id="@+id/imageView6" android:scaleType="fitXY"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/textView6" android:textSize="30sp"
+                    android:gravity="center"/>
         </FrameLayout>
     </LinearLayout>
 </layout>
