--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -57,44 +57,44 @@
                     android:id="@+id/textView3"
                     android:gravity="center" android:textSize="30sp"/>
         </FrameLayout>
-        <!--<FrameLayout-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent" android:id="@+id/frameLayout4" android:layout_weight="1">-->
+        <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:id="@+id/frameLayout4" android:layout_weight="1">
 
-            <!--<ImageView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"-->
-                    <!--android:id="@+id/imageView4" android:scaleType="fitXY"/>-->
-            <!--<TextView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent" android:id="@+id/textView4" android:textSize="30sp"-->
-                    <!--android:gravity="center"/>-->
-        <!--</FrameLayout>-->
-        <!--<FrameLayout-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent" android:id="@+id/frameLayout5" android:layout_weight="1">-->
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
+                    android:id="@+id/imageView4" android:scaleType="fitXY"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/textView4" android:textSize="30sp"
+                    android:gravity="center"/>
+        </FrameLayout>
+        <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:id="@+id/frameLayout5" android:layout_weight="1">
 
-            <!--<ImageView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"-->
-                    <!--android:id="@+id/imageView5" android:scaleType="fitXY"/>-->
-            <!--<TextView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent" android:id="@+id/textView5" android:textSize="30sp"-->
-                    <!--android:gravity="center"/>-->
-        <!--</FrameLayout>-->
-        <!--<FrameLayout-->
-                <!--android:layout_width="0dp"-->
-                <!--android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/frameLayout6">-->
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
+                    android:id="@+id/imageView5" android:scaleType="fitXY"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/textView5" android:textSize="30sp"
+                    android:gravity="center"/>
+        </FrameLayout>
+        <FrameLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/frameLayout6">
 
-            <!--<ImageView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"-->
-                    <!--android:id="@+id/imageView6" android:scaleType="fitXY"/>-->
-            <!--<TextView-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="match_parent" android:id="@+id/textView6" android:textSize="30sp"-->
-                    <!--android:gravity="center"/>-->
-        <!--</FrameLayout>-->
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
+                    android:id="@+id/imageView6" android:scaleType="fitXY"/>
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" android:id="@+id/textView6" android:textSize="30sp"
+                    android:gravity="center"/>
+        </FrameLayout>
     </LinearLayout>
 </layout>
