--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -14,15 +14,23 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
             <ImageView
+                    android:id="@+id/imageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/imageView" app:srcCompat="@drawable/blackgreen" android:scaleType="fitXY"/>
+                    android:background="@drawable/blackgreen"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/flag" />
+
             <TextView
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/textView"
-                    android:gravity="center" android:textSize="30sp"/>
+                    android:gravity="center"
+                    android:scrollbarThumbHorizontal="@drawable/bluesquare"
+                    android:scrollbarThumbVertical="@drawable/bluesquare"
+                    android:textSize="30sp" />
         </FrameLayout>
 
         <FrameLayout
@@ -30,11 +38,14 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
             <ImageView
+                    android:id="@+id/imageView2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/imageView2"
-                    app:srcCompat="@drawable/blackgreen" android:scaleType="fitXY"/>
+                    android:background="@drawable/blackgreen"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/flag" />
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -46,11 +57,15 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1">
+
             <ImageView
+                    android:id="@+id/imageView3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:id="@+id/imageView3"
-                    android:layout_weight="1" android:scaleType="fitXY" app:srcCompat="@drawable/blackgreen"/>
+                    android:layout_weight="1"
+                    android:background="@drawable/blackgreen"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/flag" />
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -62,9 +77,12 @@
                 android:layout_height="match_parent" android:id="@+id/frameLayout4" android:layout_weight="1">
 
             <ImageView
+                    android:id="@+id/imageView4"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
-                    android:id="@+id/imageView4" android:scaleType="fitXY"/>
+                    android:layout_height="match_parent"
+                    android:background="@drawable/blackgreen"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/flag" />
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" android:id="@+id/textView4" android:textSize="30sp"
@@ -75,9 +93,12 @@
                 android:layout_height="match_parent" android:id="@+id/frameLayout5" android:layout_weight="1">
 
             <ImageView
+                    android:id="@+id/imageView5"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
-                    android:id="@+id/imageView5" android:scaleType="fitXY"/>
+                    android:layout_height="match_parent"
+                    android:background="@drawable/blackgreen"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/flag" />
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" android:id="@+id/textView5" android:textSize="30sp"
@@ -88,9 +109,12 @@
                 android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/frameLayout6">
 
             <ImageView
+                    android:id="@+id/imageView6"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" app:srcCompat="@drawable/blackgreen"
-                    android:id="@+id/imageView6" android:scaleType="fitXY"/>
+                    android:layout_height="match_parent"
+                    android:background="@drawable/blackgreen"
+                    android:scaleType="fitXY"
+                    app:srcCompat="@drawable/flag" />
             <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" android:id="@+id/textView6" android:textSize="30sp"
