--- a/app/src/main/res/layout/activity_game_over.xml
+++ b/app/src/main/res/layout/activity_game_over.xml
@@ -11,7 +11,7 @@
             android:text="GameOver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView4"
+            android:id="@+id/overText"
             android:textColor="@android:color/holo_red_dark"
             android:textSize="75dp"
             app:layout_constraintStart_toStartOf="parent"
