--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -21,7 +21,8 @@
             android:text="Minesweeper"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView7" android:textSize="60dp"
+            android:id="@+id/homeText"
+            android:textSize="60dp"
             android:textColor="#00BCD4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
